<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackground"
        android:focusable="true"
        android:focusableInTouchMode="true"
        tools:context=".ui.movies.MovieActivity">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerView_Main"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="visible" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/loading_view"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:visibility="gone"
            app:lottie_autoPlay="true"
            app:lottie_fileName="snap_loader_white.json"
            app:lottie_loop="true" />

        <!-- include bottom sheet -->
        <LinearLayout
            android:id="@+id/bottom_sheet"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:background="@color/colorPrimary"
            android:clickable="true"
            android:orientation="vertical"
            android:padding="32dp"
            app:behavior_hideable="true"
            app:behavior_peekHeight="0dp"
            app:layout_behavior="android.support.design.widget.BottomSheetBehavior">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/filterPrompt"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/colorWhite" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal"
                android:weightSum="5">

                <EditText
                    android:id="@+id/editText_min"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:hint="@string/minYear"
                    android:inputType="number"
                    android:maxLength="4"
                    android:nextFocusLeft="@id/editText_min"
                    android:nextFocusUp="@id/editText_min"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/colorWhite"
                    android:textColorHint="@color/colorLtGrey" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/to"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/colorWhite" />

                <EditText
                    android:id="@+id/editText_max"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:hint="@string/maxYear"
                    android:inputType="number"
                    android:maxLength="4"
                    android:nextFocusLeft="@id/editText_max"
                    android:nextFocusUp="@id/editText_max"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/colorWhite"
                    android:textColorHint="@color/colorLtGrey" />
            </LinearLayout>

            <Button
                android:id="@+id/button_filter"
                fontPath="fonts/Roboto-Light.ttf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="16dp"
                android:text="@string/filter"
                android:theme="@style/AccentButton" />


        </LinearLayout>

    </android.support.design.widget.CoordinatorLayout>
</layout>
